tests/__snapshots__/validation-fixtureFileMatch-cannot-start-with-slash.snap.txt
Error: A 'fixtureFileMatch' pattern cannot start with '/'.

The files are only collected within the 'rootPath' directory.

  1 | {
  2 |   "fixtureFileMatch": [
  3 |     "/fixtures"
    |     ~~~~~~~~~~~
  4 |   ]
  5 | }
  6 | 

      at ./tstyche.config.json:3:5

